fixed cql tests