@@ -17,7 +17,7 @@
 package org.polypheny.db.monitoring.events;
 
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import lombok.Getter;
 import lombok.Setter;
@@ -37,7 +37,7 @@ public class QueryEvent extends StatementEvent {
 
     @Override
     public <T extends MonitoringDataPoint> List<Class<T>> getMetrics() {
-        return Arrays.asList( (Class<T>) QueryDataPointImpl.class );
+        return List.of( (Class<T>) QueryDataPointImpl.class );
     }
 
 
@@ -47,7 +47,7 @@ public class QueryEvent extends StatementEvent {
         if ( updatePostCosts ) {
             MonitoringServiceProvider.getInstance().updateQueryPostCosts( this.physicalQueryClass, this.executionTime );
         }
-        return Arrays.asList( queryDataPoint );
+        return Collections.singletonList( queryDataPoint );
     }
 
 }
